Arreglando: relaciones entre series,muestras y detalles, modificando cambioestado